--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,8 @@ services:
       - .:/app
     environment:
       - PYTHONUNBUFFERED=1
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+#    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: /code/start.sh
+    
+volumes:
+  db_data:
