--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Set up SSH Key
         run: |
-          echo "${{ secrets.CD_SSH_KEY }}" > private_key
+          echo "${{ secrets.EC2_SSH_KEY }}" > private_key
           chmod 600 private_key
 
       - name: Deploy to EC2 server
