--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
+      - .:/code 
       - db_data:/code/data
     environment:
       - PYTHONUNBUFFERED=1
