--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
 #    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    command: /code/start.sh
+    command: bash /code/start.sh
     
 volumes:
   db_data:
