--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       - "8000:8000"
     volumes:
       - .:/code 
-      - db_data:/code/data
+      # - db_data:/code/data
     environment:
       - PYTHONUNBUFFERED=1
 #    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     command: bash /code/start.sh
     
-volumes:
-  db_data:
+# volumes:
+#   db_data:
